[package]
name = "log-parser"
version = "0.1.0"
authors = ["Auke Willem Oosterhoff <aukewillem.oosterhoff@mobilityhouse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
regex = "1"
tui = "0.5"
termion = "1.5"
nix = "0.15.0"
crossbeam = "0.7"
